[package]
name = "fortify_derive"
version = "0.2.0"
edition = "2021"
authors = ["Dmitry Zamkov <dmitry94@gmail.com>"]
description = "Derive macros for fortify"
repository = "https://github.com/dzamkov/fortify"
license = "MIT OR Apache-2.0"

[lib]
name = "fortify_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }